form elements no longer overflowing page width

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -51,7 +51,8 @@ button[disabled] {
 }
 
 .contact__form, .contact__details {
-    padding-left: 2rem; padding-right: 2rem;
+    padding-left: 2rem;
+    /* padding-right: 2rem; */
 }
 
 .contact__form .form-control, .contact__form button {
