--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,7 +24,8 @@ body {
 
 .invisible {
     visibility: hidden;
-    height: 0; width: 0;
+    /* width: 0; */
+    height: 0;
     padding: 0;
     border: none;
 }
